# small-cap-trading-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_filing_insider_tables.py  003_risk_tables.py
backend/src/: config.py  db.py  main.py
backend/src/api/: ws.py
backend/src/api/routes/: filings.py  orders.py  portfolio.py  risk.py  screener.py  signals.py  system.py  tickers.py  watchlists.py
backend/src/models/: schemas.py
backend/src/services/ai/: __init__.py  claude_client.py  ollama_client.py  prompts.py  router.py
backend/src/services/data/: edgar_monitor.py  finra_short.py  insider_tracker.py  market_data_service.py  polygon_ws.py
backend/src/services/execution/: alpaca_broker.py  oms.py  paper_simulator.py
backend/src/services/risk/: __init__.py  circuit_breakers.py  compliance.py  engine.py  position_limits.py
backend/src/services/screener/: presets.py
backend/src/services/signals/: distressed.py  engine.py  insider.py  squeeze.py  technical.py  volume.py
backend/src/workers/: ai_worker.py  edgar_worker.py  health_check.py  market_data.py  signal_scanner.py
backend/tests/: test_health.py
docs/research/: 01-data-sources-and-apis.md  02-architecture-and-signals.md  03-regulatory-and-legal.md  04-local-llm-vs-cloud.md  05-testing-and-backtesting.md  06-startup-capital.md  07-frontend-design.md  08-guardrails.md
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+34 files in other folders)
