[project]
name = "small-cap-trading"
version = "0.1.0"
description = "Small-cap stock trading platform with AI-driven signal detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "anthropic>=0.40.0",
    "redis[hiredis]>=5.2.0",
    "orjson>=3.10.0",
    "alpaca-py>=0.33.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
